Added to package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "upside-down-pendulum",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.11.3"
+  },
   "description": "An upside down pendulum (in wall time, not cpu time)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:AriSweedler/upside-down-pendulum.git"
+  },
   "author": "Ari Sweedler",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
+  }
 }
