--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "python -m SimpleHTTPServer 8000"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,6 @@
   "author": "Ari Sweedler",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "socket.io": "^2.2.0"
+    "express": "^4.16.4"
   }
 }
